# XMLParser

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yaml  fill_db.py  fill_test_db.xml  pyproject.toml
src/api/: app.py  lifespan.py
src/api/routers/routers/: xml_handlers.py
src/common/converters/: converters.py
src/common/exceptions/: common.py
src/common/filters/: pagination.py
src/common/settings/: config.py  config_dev.py  logger.py
src/domain/entities/: base.py  base_lxml.py  lxml_entities.py
src/domain/exceptions/: entities.py
src/domain/schemas/: response_schema.py  xml_schemas.py
src/infra/alembic/: env.py
src/infra/alembic/versions/: 0dcaea450a64_created_product_and_category_models.py  215fd06a32d6_created_models.py  3ceac477b2f2_created_models_categories_and_products.py  5597757c5261_created_product_and_category_models.py
src/infra/celery/: client.py  hehe.py  tasks.py
src/infra/db/memory/: memory_db.py
src/infra/db/mongo/: db.py
src/infra/db/postgres/: db.py
src/infra/db/postgres/models/: base.py  (+1 more)
src/infra/exceptions/: exceptions.py
src/infra/repository/mongo/: base_mongo.py  gpt_answers_repo.py
src/logic/: container.py  xml_parser.py
src/logic/other/: gpt_service.py  http_client.py
src/logic/repo_service/: category_service.py  mongo_service.py  produce_category_service.py  product_category_service.py  product_service.py
src/logic/use_case/: gpt_usecase.py  product_category.py  products.py
src/tests/: conftest.py
src/tests/domain/: test_entities.py
src/tests/logic/: conftest.py  test_products.py
(+3 files in other folders)
